# Chess-Engine

./: .gitignore  CMakeLists.txt  README.md  log.txt  main.cpp  todo.md
src/: CMakeLists.txt  board.cpp  board.h  input_handle.cpp  input_handle.h  main.cpp  manager.cpp  manager.h  move.h  pieces.h  settings.h  types.h  ui.cpp  ui.h  utils.h
src/analysis/: CEngine_v0_vs_CEngine_v0_analysis.txt  CEngine_v2_vs_CEngine_v0_analysis.txt
src/cengine/: CMakeLists.txt
src/cengine/include/cengine/: board.h  cache.h  castling_rights.h  cengine.h  engine.h  eval.h  extensions.h  hash.h  history.h  input_handle.h  interrupt.h  log.h  magic_bitboards.h  mailbox.h  manager.h  manager_impl.h  move.h  move_gen.h  move_ordering.h  perft.h  pgn.h  pieces.h  reductions.h  search.h  search_options.h  search_utils.h  settings.h  state.h  test.h  threads.h  time_man.h  time_management.h  transp_table.h  types.h  uci.h  ui.h  utils.h  zobrist.h
src/cengine/src/: board.cpp  engine.cpp  eval.cpp  hash.cpp  input_handle.cpp  log.cpp  magic_bitboards.cpp  mailbox.cpp  manager.cpp  manager_impl.cpp  move_gen.cpp  move_ordering.cpp  perft.cpp  pgn.cpp  search.cpp  settings.cpp  test.cpp  threads.cpp  uci.cpp  ui.cpp  utils.cpp  zobrist.cpp
src/engines/: CEngine  CEngine_v0  CEngine_v1  CEngine_v2  CEngine_v3  CEngine_v36  log.txt
src/img/: CMakeLists.txt
src/py/: analysis.py  main.py  test.py  versus.py  versus_ui.py
src/py/package/: engine.py  inputs.py  settings.py  ui.py
src/ui/: CMakeLists.txt  engine.py  inputs.py  log.txt  main.py  requirements.txt  settings.py  versus.py
src/ui/include/ui/: analysis.hpp  ansi.hpp  base_manager.hpp  board_renderer.hpp  board_reneder.hpp  game_manager.hpp  input_handle.h  namespaces.hpp  renderer.hpp  single_player.hpp  ui.h  ui.hpp
src/ui/package/: engine.py  inputs.py  settings.py  ui.py
src/ui/src/: analysis.cpp  base_manager.cpp  board_renderer.cpp  board_reneder.cpp  game_manager.cpp  input_handle.cpp  renderer.cpp  single_player.cpp  ui.cpp
src/utils/: openings.txt
src/versus/: CEngine_v0_vs_CEngine_v0.pgn  CEngine_v0_vs_CEngine_v0_results.txt  CEngine_v0_vs_CEngine_v3-asp-oldeval.pgn  CEngine_v0_vs_CEngine_v3-asp-oldeval_results.txt  CEngine_v0_vs_CEngine_v3-asp.pgn  CEngine_v0_vs_CEngine_v3-asp_results.txt  CEngine_v0_vs_CEngine_v3.pgn  CEngine_v0_vs_CEngine_v30.pgn  CEngine_v0_vs_CEngine_v30_results.txt  CEngine_v0_vs_CEngine_v31.pgn  CEngine_v0_vs_CEngine_v31_results.txt  CEngine_v0_vs_CEngine_v32.pgn  CEngine_v0_vs_CEngine_v32_results.txt  CEngine_v0_vs_CEngine_v33.pgn  CEngine_v0_vs_CEngine_v33_results.txt  CEngine_v0_vs_CEngine_v34.pgn  CEngine_v0_vs_CEngine_v34_results.txt  CEngine_v0_vs_CEngine_v35.pgn  CEngine_v0_vs_CEngine_v35_results.txt  CEngine_v0_vs_CEngine_v36.pgn  CEngine_v0_vs_CEngine_v36_results.txt  CEngine_v0_vs_CEngine_v3_results.txt  CEngine_v2_vs_CEngine_v0.pgn  CEngine_v2_vs_CEngine_v0_results.txt  CEngine_v2_vs_CEngine_v1.pgn  CEngine_v2_vs_CEngine_v1_results.txt  CEngine_v3_norm_vs_CEngine_v0.pgn  CEngine_v3_norm_vs_CEngine_v0_results.txt  CEngine_v3_vs_CEngine_v0.pgn  CEngine_v3_vs_CEngine_v0_results.txt
tests/: CMakeLists.txt
tests/src/: board_unittest.cc  hash_unittest.cc  includes.h  manager_unittest.cc  perft_tests.cc  pgn_unittest.cc  terminations.cc  utils_unittest.cc
